mod2-solution/main.css
/***Base Styles***/

* {
box-sizing: border-box;


}

body {
margin: 0;
padding: 0;
background-color: #9BCDF9;

}

h1 {
text-align: center;
font-family: arial;
font-weight: bold;


}


p {

background-color: #FCFBC6;
width: 90%;
height: 150px;
margin-right: auto;
margin-left: auto;
padding: 10px;
font-family: arial;
border: groove 5px gold;
}


/*Section Heading*/

h2 {

background: white;
font-size: 20px;
width: 65px;
text-align: center;
position: absolute;
top: 10px;
right: 30px;


}

#seoul {
background-color: pink;

}

#taipai {
background-color: green;

}

#tokyo {
	background-color: red;
}




/***Simple Responsive Framework***/


.row {

width: 100%;




}

/*Desktop*/

@media (min-width: 992px) {
.col-lg-4 {
width: 33.3%;
float: left;
position: relative;

}
}

/*Tablet*/

@media (min-width: 768px) and (max-width: 991px) {

.col-md-6 {

width: 50%;
float: left;
position: relative;


}

.col-md-12 {

width: 100%;
float: left;
position: relative;



}

/*Mobile*/

}

@media (max-width: 767px) {

.col-sml-12 {

width: 100%;
float: left;
position: relative;


}


}

